renamed root client app

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/dream.css" />
     </head>
     <body>
-        <script src="js/dream.js"></script>
+        <script src="js/dreamApp.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
