--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <script src="js/dreamApp.js"></script>
-
+        <script src="http://localhost:35729/livereload.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
         /*
